@@ -1,3 +1,7 @@
+2004-08-31 Hasso Tepper <hasso at quagga.net>
+
+	* zebra.8: Document -s/--nl-bufsize command line switch.
+
 2004-08-27 Hasso Tepper <hasso at quagga.net>
 
 	* Update vtysh man page to reflect changes in shell.
